--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "native-base": "^2.10.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
+    "react-native-agora": "^2.3.3-alpha.5",
     "react-native-config": "^0.11.7",
     "react-native-drawer": "^2.5.1",
     "react-native-elements": "^0.19.1",
