--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,6 +134,10 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-i18n')
+    compile project(':react-native-google-signin')
+    compile project(':react-native-fbsdk')
+    compile project(':react-native-config')
     compile project(':react-native-agora')
     compile project(':react-native-vector-icons')
     implementation fileTree(dir: "libs", include: ["*.jar"])
