--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,4 +5,12 @@ target 'Trust' do
   
   pod 'AgoraRtcEngine_iOS'
 
+  pod 'react-native-config', :path => '../node_modules/react-native-config'
+
+  pod 'react-native-fbsdk', :path => '../node_modules/react-native-fbsdk'
+
+  pod 'RNGoogleSignin', :path => '../node_modules/react-native-google-signin'
+
+  pod 'RNI18n', :path => '../node_modules/react-native-i18n'
+
 end
