Add flash message

--- a/src/assets/data/config.json
+++ b/src/assets/data/config.json
@@ -18,5 +18,8 @@
         "frameRate": 15,
         "orientationMode": 0
     },
-    "uid": 1
+    "uid": 1,
+    "alert": {
+        "position": "top"
+    }
 }
