--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,8 +9,10 @@ target 'Trust' do
 
   pod 'react-native-fbsdk', :path => '../node_modules/react-native-fbsdk'
 
-  pod 'RNGoogleSignin', :path => '../node_modules/react-native-google-signin'
-
   pod 'RNI18n', :path => '../node_modules/react-native-i18n'
+
+  pod 'Firebase/Core'
+
+  pod 'RNGoogleSignin', :path => '../node_modules/react-native-google-signin'
 
 end
