--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-drawer": "^2.5.1",
     "react-native-elements": "^0.19.1",
     "react-native-fbsdk": "^0.8.0",
+    "react-native-firebase": "^5.2.3",
     "react-native-flash-message": "^0.1.10",
     "react-native-google-signin": "^1.0.2",
     "react-native-i18n": "^2.0.15",
