--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,18 +1,12 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+#platform :ios, '9.0'
 
 target 'Trust' do
   
   pod 'AgoraRtcEngine_iOS'
 
-  pod 'react-native-config', :path => '../node_modules/react-native-config'
-
-  pod 'react-native-fbsdk', :path => '../node_modules/react-native-fbsdk'
-
-  pod 'RNI18n', :path => '../node_modules/react-native-i18n'
-
-  pod 'Firebase/Core'
-
-  pod 'RNGoogleSignin', :path => '../node_modules/react-native-google-signin'
+  # Required by RNFirebase
+  pod 'Firebase/Core', '~> 5.15.0'
+  pod 'Firebase/Auth'
 
 end
