--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^9.0.0",
+    "@types/react-native-drawer": "^2.5.2",
     "@types/react-native-i18n": "^2.0.0",
     "@types/react-native-loading-spinner-overlay": "^0.5.1",
     "@types/react-native-vector-icons": "^4.6.4",
@@ -24,7 +25,6 @@
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-agora": "^2.3.3-alpha.5",
-    "react-native-drawer": "^2.5.1",
     "react-native-elements": "^0.19.1",
     "react-native-firebase": "^5.2.3",
     "react-native-flash-message": "^0.1.10",
