--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-agora": "^2.3.3-alpha.5",
+    "react-native-awesome-alerts": "^1.2.0",
     "react-native-elements": "^0.19.1",
     "react-native-firebase": "^5.2.3",
     "react-native-flash-message": "^0.1.10",
