--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-elements": "^0.19.1",
     "react-native-firebase": "^5.2.3",
     "react-native-flash-message": "^0.1.10",
+    "react-native-gifted-chat": "^0.7.2",
     "react-native-i18n": "^2.0.15",
     "react-native-linkedin": "^1.3.1",
     "react-native-linkedin-signin": "^0.0.2",
