Refactor firebase services

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-navigation": "^3.0.1",
     "@types/react-redux": "^6.0.12",
     "axios": "^0.18.0",
+    "firebase": "^5.9.2",
     "moment": "^2.24.0",
     "native-base": "^2.10.0",
     "react": "16.6.3",
