--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^9.0.0",
+    "@types/lodash": "^4.14.123",
     "@types/react-native-drawer": "^2.5.2",
     "@types/react-native-i18n": "^2.0.0",
     "@types/react-native-loading-spinner-overlay": "^0.5.1",
