--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,9 +134,10 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-community_async-storage')
+    implementation project(':react-native-i18n')
     compile project(':react-native-firebase')
     compile project(':react-native-google-signin')
-    compile project(':react-native-i18n')
     compile project(':react-native-fbsdk')
     compile project(':react-native-config')
     compile project(':react-native-agora')
