--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,10 +3,11 @@ platform :ios, '9.0'
 
 target 'Trust' do
   
-  pod 'AgoraRtcEngine_iOS'
+  # pod 'AgoraRtcEngine_iOS'
 
   # Required by RNFirebase
   pod 'Firebase/Core', '~> 5.15.0'
   pod 'Firebase/Auth'
+  pod 'Firebase/Database'
 
 end
