--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^9.0.0",
+    "@react-native-community/async-storage": "^1.2.2",
     "@types/lodash": "^4.14.123",
     "@types/react-native-drawer": "^2.5.2",
     "@types/react-native-i18n": "^2.0.0",
@@ -26,7 +27,7 @@
     "moment": "^2.24.0",
     "native-base": "^2.10.0",
     "react": "16.6.3",
-    "react-native": "0.57.8",
+    "react-native": "^0.59.2",
     "react-native-agora": "^2.3.3-alpha.5",
     "react-native-awesome-alerts": "^1.2.0",
     "react-native-elements": "^0.19.1",
