--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/vector-icons": "^9.0.0",
     "@react-native-community/async-storage": "^1.2.2",
+    "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.123",
     "@types/react-native-drawer": "^2.5.2",
     "@types/react-native-i18n": "^2.0.0",
@@ -65,6 +66,10 @@
   },
   "jest": {
     "preset": "react-native",
+    "transformIgnorePatterns": [
+      "/node_modules/(?!(jest-)?react-native|react-navigation)",
+      "/node_modules/(?!@react-native-community).+\\.js$"
+    ],
     "transform": {
       "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js",
       "^.+\\.tsx?$": "ts-jest"
@@ -74,7 +79,10 @@
         "tsConfigFile": "tsconfig.jest.json"
       }
     },
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "testMatch": [ 
+      "**/__tests__/**/*.(js|ts|tsx)", 
+      "**/?(*.)+(spec|test).(js|ts|tsx)"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
