Fix issue Agora

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,24 +10,16 @@ target 'Trust' do
   pod 'Firebase/Auth'
   pod 'Firebase/Database'
 
-  # pod 'react-native-agora', :path => '../node_modules/react-native-agora'
+  pod 'react-native-agora', :path => '../node_modules/react-native-agora'
+  pod 'React', :path => '../node_modules/react-native'
+  pod 'yoga', :path => '../node_modules/react-native/ReactCommon/yoga'
 
 end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
-
-    # The following is needed to ensure the "archive" step works in XCode.
-    # It removes React & Yoga from the Pods project, as it is already included in the main project.
-    # Without this, you'd see errors when you archive like:
-    # "Multiple commands produce ... libReact.a"
-    # "Multiple commands produce ... libyoga.a"
-
-    targets_to_ignore = %w(React yoga)
-    
-    if targets_to_ignore.include? target.name
+    if target.name == "React"
       target.remove_from_project
     end
-
   end
 end
