--- a/ios/Trust/Info.plist
+++ b/ios/Trust/Info.plist
@@ -40,7 +40,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>Use camera for video call</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Use microphone for video call</string>
 	<key>UIAppFonts</key>
@@ -69,6 +69,10 @@
 		<string>RobotoCondensed-Light.ttf</string>
 		<string>RobotoCondensed-LightItalic.ttf</string>
 		<string>RobotoCondensed-Regular.ttf</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
