--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-linkedin": "^1.3.1",
     "react-native-linkedin-signin": "^0.0.2",
     "react-native-loading-spinner-overlay": "^1.0.1",
+    "react-native-maps": "^0.24.0",
     "react-native-router-flux": "^4.0.6",
     "react-native-vector-icons": "^6.2.0",
     "react-navigation": "^3.0.9",
@@ -79,8 +80,8 @@
         "tsConfigFile": "tsconfig.jest.json"
       }
     },
-    "testMatch": [ 
-      "**/__tests__/**/*.(js|ts|tsx)", 
+    "testMatch": [
+      "**/__tests__/**/*.(js|ts|tsx)",
       "**/?(*.)+(spec|test).(js|ts|tsx)"
     ],
     "moduleFileExtensions": [
